[IMPROVEMENT] mock-smtp-server (parameters without values) (#2489)